--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,20 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/chessboardjs/www/releases/0.3.0/img",
+                "output": "./img"
+              }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/chessboardjs/www/releases/0.3.0/css/chessboard-0.3.0.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/chessboardjs/www/releases/0.3.0/js/chessboard-0.3.0.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -91,12 +99,20 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/chessboardjs/www/releases/0.3.0/img",
+                "output": "./img"
+              }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/chessboardjs/www/releases/0.3.0/css/chessboard-0.3.0.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/chessboardjs/www/releases/0.3.0/js/chessboard-0.3.0.js"
+            ]
           }
         }
       }
