--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
               "./node_modules/chessboardjs/www/releases/0.3.0/css/chessboard-0.3.0.min.css"
             ],
             "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/chessboardjs/www/releases/0.3.0/js/chessboard-0.3.0.js"
             ]
           },
@@ -111,6 +112,7 @@
               "./node_modules/chessboardjs/www/releases/0.3.0/css/chessboard-0.3.0.min.css"
             ],
             "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/chessboardjs/www/releases/0.3.0/js/chessboard-0.3.0.js"
             ]
           }
