--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/chess.js": "^0.11.2",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.8",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
