--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@chrisoakman/chessboardjs": "^1.0.0",
+    "angular": "^1.8.2",
     "chess.js": "^0.12.0",
     "chessboardjs": "0.0.1",
     "express": "^4.17.1",
+    "imports-loader": "^3.1.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -34,7 +36,8 @@
     "@types/chess.js": "^0.11.2",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.8",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.34",
+    "@types/webpack-env": "^1.16.3",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
