adding setTurn feature and use my own chessjs version

--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@chrisoakman/chessboardjs": "^1.0.0",
     "angular": "^1.8.2",
-    "chess.js": "^0.12.0",
-    "chessboardjs": "0.0.1",
+    "chess.js": "git://github.com/jamesEmerson112/chess.js.git",
+    "chessboardjs": "~0.0.1",
     "express": "^4.17.1",
     "imports-loader": "^3.1.0",
     "jquery": "^3.6.0",
