--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
-    "@types/chess.js": "https://github.com/jamesEmerson112/DefinitelyTyped/tree/master/types/chess.js.git",
+    "@types/chess.js": "^0.11.2",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.8",
     "@types/node": "^12.20.34",
